<<<<<<< HEAD
[gd_scene load_steps=14 format=3 uid="uid://c5bmhdxc6ctns"]
=======
[gd_scene load_steps=39 format=3 uid="uid://c5bmhdxc6ctns"]
>>>>>>> fb5bb6e (lollll)

[ext_resource type="Script" uid="uid://b1k3iwk3em7m4" path="res://scenes/coffee_cup.gd" id="1_k6nsu"]
[ext_resource type="Texture2D" uid="uid://h10v2usionl" path="res://assets/sprites/coffee_minigame/coffee_0_placeholder.png" id="2_ipkrc"]
[ext_resource type="Script" uid="uid://dnk0x1oecr2rb" path="res://scenes/cup_sprite_2d.gd" id="3_dg7i4"]
[ext_resource type="Texture2D" uid="uid://c1yw3msxc1rfs" path="res://assets/sprites/coffee_minigame/plate_placeholder.png" id="3_ipkrc"]
[ext_resource type="Script" uid="uid://buvdjg8f03nud" path="res://scenes/coffee_plate.gd" id="3_vdge3"]
[ext_resource type="Texture2D" uid="uid://bnwoke5fdpcnh" path="res://assets/sprites/coffee_minigame/machine_placeholder.png" id="5_13anl"]
[ext_resource type="Script" uid="uid://ctmg8nqqlqjd6" path="res://scenes/coffee_machine.gd" id="6_vfmh3"]
[ext_resource type="Script" uid="uid://q74043h2psu0" path="res://scenes/coffee_milk.gd" id="8_67dsn"]
[ext_resource type="Texture2D" uid="uid://d2vbuucrywsmv" path="res://assets/sprites/coffee_minigame/milk_placeholder.png" id="8_vfmh3"]
<<<<<<< HEAD
=======
[ext_resource type="Texture2D" uid="uid://jm6gbufulu8h" path="res://assets/sprites/coffee_minigame/coffee_drop1.png" id="10_kff00"]
[ext_resource type="Texture2D" uid="uid://ev8ed1lt2263" path="res://assets/sprites/coffee_minigame/coffee_drop2.png" id="11_ycjhj"]
[ext_resource type="Texture2D" uid="uid://dxjdbmfwv4e3u" path="res://assets/sprites/coffee_minigame/coffee_drop3.png" id="12_f3amd"]
[ext_resource type="Texture2D" uid="uid://da2wtx4n3dqm2" path="res://assets/sprites/coffee_minigame/coffee_drop4.png" id="13_63ylg"]
[ext_resource type="Texture2D" uid="uid://dhwpwca6d5v34" path="res://assets/sprites/coffee_minigame/coffee_drop5.png" id="14_ycjhj"]
[ext_resource type="Texture2D" uid="uid://ct8qfbb2qthcc" path="res://assets/sprites/coffee_minigame/milk1.png" id="15_dilnk"]
[ext_resource type="Texture2D" uid="uid://budkwajujevkj" path="res://assets/sprites/coffee_minigame/milk2.png" id="16_8uys3"]
[ext_resource type="Texture2D" uid="uid://da7a83pf3a4db" path="res://assets/sprites/coffee_minigame/milk3.png" id="17_gxvqg"]
[ext_resource type="Texture2D" uid="uid://cug4eputk7e34" path="res://assets/sprites/coffee_minigame/milk4.png" id="18_f6eo0"]
[ext_resource type="Texture2D" uid="uid://x0346odllg6o" path="res://assets/sprites/coffee_minigame/milk5.png" id="19_hhtbo"]
>>>>>>> fb5bb6e (lollll)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdge3"]
size = Vector2(104, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13anl"]
size = Vector2(112, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhgqp"]
size = Vector2(235, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67dsn"]
size = Vector2(15.75, 31.75)

<<<<<<< HEAD
=======
[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_63ylg"]
load_path = "res://.godot/imported/coffee_drop1.png-38517f0eca6514c59044d9712306c9db.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_kff00"]
atlas = SubResource("CompressedTexture2D_63ylg")
region = Rect2(16, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u56a"]
atlas = ExtResource("10_kff00")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycjhj"]
atlas = ExtResource("11_ycjhj")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3amd"]
atlas = ExtResource("12_f3amd")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_63ylg"]
atlas = ExtResource("13_63ylg")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw0w7"]
atlas = ExtResource("14_ycjhj")
region = Rect2(0, 0, 32, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxvqg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kff00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u56a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycjhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3amd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63ylg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw0w7")
}],
"loop": true,
"name": &"1",
"speed": 1.5
}, {
"frames": [],
"loop": true,
"name": &"nothing",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lk5mw"]
atlas = ExtResource("10_kff00")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fdbf"]
atlas = ExtResource("15_dilnk")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy6xq"]
atlas = ExtResource("16_8uys3")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrpmp"]
atlas = ExtResource("17_gxvqg")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybhe4"]
atlas = ExtResource("18_f6eo0")
region = Rect2(0, 0, 32, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_w62u5"]
atlas = ExtResource("19_hhtbo")
region = Rect2(0, 0, 32, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibtgo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk5mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fdbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy6xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrpmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybhe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w62u5")
}],
"loop": true,
"name": &"1",
"speed": 1.5
}, {
"frames": [],
"loop": true,
"name": &"nothing",
"speed": 5.0
}]

>>>>>>> fb5bb6e (lollll)
[node name="coffee_minigame" type="Node2D"]

[node name="coffee_cup" type="Area2D" parent="."]
z_index = 1
position = Vector2(64, 64)
script = ExtResource("1_k6nsu")

[node name="cup_Sprite2D" type="Sprite2D" parent="coffee_cup"]
z_index = 1
position = Vector2(64, 64)
scale = Vector2(8, 8)
texture = ExtResource("2_ipkrc")
script = ExtResource("3_dg7i4")

[node name="cup_button" type="Button" parent="coffee_cup/cup_Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -7.0
offset_top = -4.0
offset_right = 6.0
offset_bottom = 7.0

[node name="cup_CollisionShape2D" type="CollisionShape2D" parent="coffee_cup"]
z_index = 1
position = Vector2(60, 76)
shape = SubResource("RectangleShape2D_vdge3")

[node name="coffee_plate" type="Area2D" parent="."]
position = Vector2(555, 332)
script = ExtResource("3_vdge3")

[node name="plate_Sprite2D" type="Sprite2D" parent="coffee_plate"]
scale = Vector2(8, 8)
texture = ExtResource("3_ipkrc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="coffee_plate"]
shape = SubResource("RectangleShape2D_13anl")

[node name="coffee_machine" type="Area2D" parent="."]
position = Vector2(225, -20)
script = ExtResource("6_vfmh3")

[node name="Sprite2D" type="Sprite2D" parent="coffee_machine"]
<<<<<<< HEAD
position = Vector2(281.04544, 178.64853)
=======
position = Vector2(281.045, 178.649)
>>>>>>> fb5bb6e (lollll)
scale = Vector2(8, 8)
texture = ExtResource("5_13anl")

[node name="machine_button" type="Button" parent="coffee_machine/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
<<<<<<< HEAD
offset_left = -15.75568
offset_top = -7.581066
offset_right = 13.99432
offset_bottom = 2.2939339
=======
offset_left = -15.7557
offset_top = -7.58107
offset_right = 13.9943
offset_bottom = 2.29393
>>>>>>> fb5bb6e (lollll)

[node name="CollisionShape2D" type="CollisionShape2D" parent="coffee_machine"]
position = Vector2(274.5, 150)
shape = SubResource("RectangleShape2D_yhgqp")

[node name="coffeemachinetimer" type="Timer" parent="coffee_machine"]
<<<<<<< HEAD
wait_time = 5.0
=======
wait_time = 2.4
>>>>>>> fb5bb6e (lollll)
one_shot = true

[node name="coffee_milk" type="Area2D" parent="."]
position = Vector2(900, 250)
scale = Vector2(8, 8)
script = ExtResource("8_67dsn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="coffee_milk"]
position = Vector2(-0.125, 0)
shape = SubResource("RectangleShape2D_67dsn")

[node name="Sprite2D" type="Sprite2D" parent="coffee_milk"]
texture = ExtResource("8_vfmh3")

[node name="milk_button" type="Button" parent="coffee_milk/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -15.625
offset_right = 8.0
offset_bottom = 16.5

[node name="milktimer" type="Timer" parent="coffee_milk"]
<<<<<<< HEAD
wait_time = 2.0
one_shot = true

=======
wait_time = 2.4
one_shot = true

[node name="coffeedrop" type="AnimatedSprite2D" parent="."]
z_index = 100
texture_filter = 1
position = Vector2(551, 1162)
scale = Vector2(1.5, 3.152)
sprite_frames = SubResource("SpriteFrames_gxvqg")
animation = &"1"
autoplay = "nothing"

[node name="milkdrop" type="AnimatedSprite2D" parent="."]
position = Vector2(551, 1162)
scale = Vector2(1.5, 3.152)
sprite_frames = SubResource("SpriteFrames_ibtgo")
animation = &"nothing"
autoplay = "nothing"

>>>>>>> fb5bb6e (lollll)
[connection signal="button_down" from="coffee_cup/cup_Sprite2D/cup_button" to="coffee_cup" method="_on_button_button_down"]
[connection signal="button_up" from="coffee_cup/cup_Sprite2D/cup_button" to="coffee_cup" method="_on_button_button_up"]
[connection signal="area_entered" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_area_entered"]
[connection signal="area_exited" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_area_exited"]
[connection signal="mouse_entered" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_mouse_entered"]
[connection signal="mouse_entered" from="coffee_plate" to="coffee_plate" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_mouse_exited"]
[connection signal="pressed" from="coffee_machine/Sprite2D/machine_button" to="coffee_machine" method="_on_button_pressed"]
[connection signal="timeout" from="coffee_machine/coffeemachinetimer" to="coffee_cup/cup_Sprite2D" method="_on_coffeemachinetimer_timeout"]
<<<<<<< HEAD
=======
[connection signal="timeout" from="coffee_machine/coffeemachinetimer" to="coffee_machine" method="_on_coffeemachinetimer_timeout"]
>>>>>>> fb5bb6e (lollll)
[connection signal="pressed" from="coffee_milk/Sprite2D/milk_button" to="coffee_milk" method="_on_milk_button_pressed"]
[connection signal="timeout" from="coffee_milk/milktimer" to="coffee_cup/cup_Sprite2D" method="_on_milktimer_timeout"]
[connection signal="timeout" from="coffee_milk/milktimer" to="coffee_milk" method="_on_milktimer_timeout"]
